fixing deploy problem

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pasika",
   "version": "0.1.0",
-  "homepage": "http://gitname.github.io/react-gh-pages",
+  "homepage": "https://maximys963.github.io/pasika",
   "private": true,
   "dependencies": {
     "@atlaskit/css-reset": "^3.0.1",
