--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "private": true,
   "dependencies": {
     "@atlaskit/css-reset": "^3.0.1",
+    "animated": "^0.2.2",
     "css-loader": "^1.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-transition-group": "^2.4.0",
     "styled-components": "^3.4.5"
   },
   "scripts": {
